--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,34 +14,41 @@
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/public.js'></script>
   <style type="text/css">
-    .about_center{
-      margin: 40px 0;
-    }
-    .col-md-6{
-      text-align:center;
-    }
-    .about_main{
-      margin: 40px 0;
-      overflow: hidden;
-      background: #fffff2;
-    }
-    .about_text{
-      list-style-type: none;
-    }
-    .about_text li{
-      text-align: left;
-      line-height: 40px;
-    }
-    .about_weixin{
-      text-align:center;
-      margin: 20px 0;
-    }
-    .about_weixin img{
-      width: 400px;
-      height: 500px;
-    }
+  .about_center {
+    margin: 40px 0;
+  }
+
+  .col-md-6 {
+    text-align: center;
+  }
+
+  .about_main {
+    margin: 40px 0;
+    overflow: hidden;
+    background: #fffff2;
+  }
+
+  .about_text {
+    list-style-type: none;
+  }
+
+  .about_text li {
+    text-align: left;
+    line-height: 40px;
+  }
+
+  .about_weixin {
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .about_weixin img {
+    width: 400px;
+    height: 500px;
+  }
   </style>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -63,36 +71,46 @@
     <div class="about_center">
       <h3 class="page-header text-center">联系我们</h3>
       <div class="about_main">
-        <div class="col-md-6"><img src="./images/20140620180620732073.jpg" alt=""></div>
+        <div class="col-md-6"><img src="./images/20140620180620732073.jpg" width=255 height=309></div>
         <div class="col-md-6">
           <ul class="about_text">
-              <li><h4 style = 'font-weight: bold'>亳州市品驾酒业有限公司</h4></li>
-              <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
-              <li>法定代表人：孙管</li>
-              <li>手机：18815689120</li>
-              <li>业务部：顾连生</li>
-              <li>手机：18815689115</li>
-              <li>邮编：236800</li>
-              <li>网址：www.pinjiajiu.com</li>
+            <li>
+              <h4 style='font-weight: bold'>亳州市品驾酒业有限公司</h4></li>
+            <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
+            <li>法定代表人：孙管</li>
+            <li>手机：18815689120</li>
+            <li>业务部：顾连生</li>
+            <li>手机：18815689115</li>
+            <li>邮编：236800</li>
+            <li>网址：www.pinjiajiu.com</li>
           </ul>
         </div>
       </div>
       <div class="about_weixin">
-        <h3 style = 'margin: 40px; font-weight:bold; color: #555'>品驾酒微信公共号，扫一扫关注：</h3>
-        <img src="./images/weixin.jpg" alt="微信公共号">
+        <h3 style='margin: 40px; font-weight:bold; color: #555'>品驾酒负责人微信，扫一扫添加好友：</h3>
+        <img src="./images/weixin.jpg" alt="微信" width=674 height=896>
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
-      <div class="footer-bottom">
-        <div class="col-md-4 col-md-offset-4">
-          <p class="col-md-12">品驾酒有限公司</p>
-          <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-          <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
-        </div>
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
       </div>
+    </div>
   </div>
 </body>
+
 </html>
