--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src='./bs/js/Carousel.js'></script>
   <script src='./bs/js/public.js'></script>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -33,10 +34,10 @@
     <div class="Carousel-img">
       <img src="./images/banner01.jpg" height=400 width=1920>
       <img src="./images/banner02.jpg" height=400 width=1920>
-      <img src="./images/banner03.jpg" height=400 width=1920>
+      <img src="./images/banner03.jpg" height=997 width=328>
     </div>
-    <div class="Pointer-left"><img src="./images/prev.png" height=50></div>
-    <div class="Pointer-right"><img src="./images/next.png" height=50></div>
+    <div class="Pointer-left"><img src="./images/prev.png" width=24 height=43></div>
+    <div class="Pointer-right"><img src="./images/next.png" width=24 height=43></div>
     <div class="Carousel-dot">
       <ul>
         <li></li>
@@ -58,7 +59,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-1.jpg">
+              <img src="./images/title-1.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -68,7 +69,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-2.jpg">
+              <img src="./images/title-2.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -78,7 +79,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg">
+              <img src="./images/title-3.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
@@ -88,7 +89,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-4.jpg">
+              <img src="./images/title-4.jpg" width=255 height=255>
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
@@ -111,7 +112,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-7.jpg">
+              <img src="./images/title-7.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -121,7 +122,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-6.jpg">
+              <img src="./images/title-6.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -131,7 +132,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-9.jpg">
+              <img src="./images/title-9.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
@@ -141,7 +142,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-5.jpg">
+              <img src="./images/title-5.jpg" width=255 height=255>
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
@@ -202,7 +203,7 @@
             <div class="thumbnail">
               <div class="teacher-header">
                 <div class="teacher-img">
-                  <img src="./images/teacher1.jpg" height='100%' width="100%">
+                  <img src="./images/teacher1.jpg" width=300 height=300>
                 </div>
                 <div class="teacher-content">
                   <h4 class="text-center">孙管</h4>
@@ -218,7 +219,7 @@
             <div class="thumbnail">
               <div class="teacher-header">
                 <div class="teacher-img">
-                  <img src="./images/teacher2.jpg" height='100%'>
+                  <img src="./images/teacher2.jpg" width=300 height=300>
                 </div>
                 <div class="teacher-content">
                   <h4 class="text-center">雷明</h4>
@@ -234,7 +235,7 @@
             <div class="thumbnail">
               <div class="teacher-header">
                 <div class="teacher-img">
-                  <img src="./images/teacher3.jpg" height='100%'>
+                  <img src="./images/teacher3.jpg" width=300 height=300>
                 </div>
                 <div class="teacher-content">
                   <h4 class="text-center">孙正业</h4>
@@ -250,7 +251,7 @@
             <div class="thumbnail">
               <div class="teacher-header">
                 <div class="teacher-img">
-                  <img src="./images/teacher4.jpg" height='100%'>
+                  <img src="./images/teacher4.jpg" width=300 height=300>
                 </div>
                 <div class="teacher-content">
                   <h4 class="text-center">顾连生</h4>
@@ -266,8 +267,16 @@
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
     <div class="footer-bottom">
       <div class="col-md-4 col-md-offset-4">
@@ -281,4 +290,5 @@
 <script type="text/javascript">
 $('.thumbnail').css({ 'position': 'relative' });
 </script>
+
 </html>
