--- a/introduction.html
+++ b/introduction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,48 +14,62 @@
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/public.js'></script>
   <style type="text/css">
-    pre{
-      background:#fff;
-      line-height:30px;
-      font-size:14px;
-      border: none;
-      font-family: 微软雅黑;
-    }
-    .intro_main{
-      overflow:hidden;
-      margin: 40px 0;
-    }
-    .intro_main .col-md-3{
-      padding-top: 50px;
-    }
-    .intro_main .col-md-9{
-      line-height: 30px;
-    }
-    .intro_main ul{
-      list-style: none ;
-    }
-    .ul1 li:nth-child(2n) {
-      text-indent: 1cm;
-    }
-    .ul2 li:nth-child(2n) {
-      background:#9c061b;
-      line-height: 40px;
-      font-weight:bold;
-      font-size:16px;
-      padding-left:20px;
-      color:#fafafa;
-    }
-    .ul1 img,.ul3 img{
-      width: 100%;
-    }
-    .intro_main img{
-      margin: 25px 0;
-    }
-    .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus{
-      background:#9c061b;
-    }
+  pre {
+    background: #fff;
+    line-height: 30px;
+    font-size: 14px;
+    border: none;
+    font-family: 微软雅黑;
+  }
+
+  .intro_main {
+    overflow: hidden;
+    margin: 40px 0;
+  }
+
+  .intro_main .col-md-3 {
+    padding-top: 50px;
+  }
+
+  .intro_main .col-md-9 {
+    line-height: 30px;
+  }
+
+  .intro_main ul {
+    list-style: none;
+  }
+
+  .ul1 li:nth-child(2n) {
+    text-indent: 1cm;
+  }
+
+  .ul2 li:nth-child(2n) {
+    background: #9c061b;
+    line-height: 40px;
+    font-weight: bold;
+    font-size: 16px;
+    padding-left: 20px;
+    color: #fafafa;
+  }
+
+  .ul1 img,
+  .ul3 img {
+    height: 300px;
+    width: 100%;
+  }
+
+  .intro_main img {
+    margin: 25px 0;
+  }
+
+  .nav-pills>li.active>a,
+  .nav-pills>li.active>a:hover,
+  .nav-pills>li.active>a:focus {
+    background: #9c061b;
+  }
   </style>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -84,19 +99,21 @@
       </div>
       <div class="col-md-9 daohang">
         <ul class="ul1">
-          <li><h3 class="page-header text-center">生产商简介</h3></li>
+          <li>
+            <h3 class="page-header text-center">生产商简介</h3></li>
           <li>亳州市好运酒业有限责任公司位于中国名酒之乡---安徽亳州。安徽亳州是国家历史文化名城，具有三千七百多年的历史。自古以来，人杰地灵，物华天宝，道教先哲老子、庄子、一代英豪曹操、神医华佗皆诞生于此。古井镇为安徽白酒第一镇，享誉“中国酒城”之称。正是亳州优质的地下泉水，肥沃的土壤，适宜的酿酒环境，才酿造出绵、甜、净、爽的好运酒。</li>
-          <li><img src="./images/intro-1.jpg" alt=""></li>
+          <li><img src="./images/intro-1.jpg" alt="" width=680 height=240></li>
           <li>亳州市好运酒业有限责任公司是一家以生产浓香型白酒为核心业务，并集包装、销售、研发为一体的大型酒业公司。公司创立于1978年，三十多年励精图治，三十多年成果辉煌。今日的好运酒业，占地面积500余亩，职工700余人，其中专业技术人员65人。好运酒业拥有最先进的白酒科研、化验设备，有发酵池1600条、现代化生产流水线4条，三个酿酒基地，年产优质曲酒上万吨、原酒储备2万吨。生产的优质曲酒主要供应全国各大知名酒厂，并以品牌形式奉献给全国的忠实消费者。</li>
-          <li><img src="./images/intro-2.jpg" alt=""></li>
+          <li><img src="./images/intro-2.jpg" width=680 height=240></li>
           <li>一流的科学规划设计厂区，一流的先进设备、技术与理念，一流的管理和专业人才，使好运酒业在短短的三十多年间，便成功跻身区域白酒名企行列。</li>
-          <li><img src="./images/intro-3.jpg" alt=""></li>
+          <li><img src="./images/intro-3.jpg" width=680 height=240></li>
           <li>公司旗下现有的“好运人家”、“稻香楼”、“九韵天香淡雅”、高端定制酒“和御道”几大品牌，“好运人家”酒是安徽好运酒业倾力打造的经典之作，四大核心产品之一。“好运人家”酒秉承古井镇千年传统的酿造工艺，纯手工酿造，按照“量质入坛”，恒温窖藏，使产品具有“清如水晶、香如幽兰、入口绵甜、回味经久不息”的特点。该产品包装独特、浑然天成，具有浓厚的历史文化气息，同时产品一直致力于：真产地、真工艺、真酿造的宗旨，让消费者真正喝到好酒。为了更好的的满足市场需求，填补市场空白，让更多的消费者喝道无所超值的好酒。公司专门成立了好运人家酒品牌运营事业部，自上市以来，由于其准确的市场定位、独特成熟的运作模式，指导经销商“落实执行力、保证高铺货率、建立核心客户资源库、建设形象店和样板街”等行动的积极配合下，市场发展迅速。各项促销活动的展开，极大的刺激了消费者的热情，使得不少地区惊现当天上架、当天动销、当天补货的火爆局面；通过多种营销手段整合下游渠道资源，迅速建立分销商联盟体系，让经销商现金快速回款。在公司强大的广告聚焦投放引导下，实现市场有效的推拉结合，保证了产品顺利在各渠道畅通无阻，产品步入正常销售轨道迅速，深得经销商朋友们的信赖！</li>
-          <li><img src="./images/intro-4.jpg" alt=""></li>
+          <li><img src="./images/intro-4.jpg" width=680 height=240></li>
           <li>雄关漫道真如铁，而今迈步从头越。好运酒业铸造了辉煌，更期待超越辉煌，未来将齐心合力，不断发展，唯进步不止步，致力打造中国白酒百年品牌。</li>
         </ul>
         <ul class="ul2">
-          <li><h3 class="page-header text-center">企业文化</h3></li>
+          <li>
+            <h3 class="page-header text-center">企业文化</h3></li>
           <li>以人为本</li>
           <li><pre>
     人才是公司的第一财富，现在企业的竞争是人才的竞争，谁拥有最优秀的人才，谁就拥有了市场。
@@ -126,48 +143,58 @@
           </li>
         </ul>
         <ul class="ul3">
-          <li><h3 class="page-header text-center">酿造工艺</h3></li>
+          <li>
+            <h3 class="page-header text-center">酿造工艺</h3></li>
           <li>好运酒业秉承古井镇千年传统的酿造工艺，纯手工酿造，按照"量质入坛"，恒温窖藏，使产品具有"清如水晶、香如幽兰、入口绵甜、回味经久不息"的特点。</li>
-          <li><img src="./images/gongyi1.jpg" alt=""></li>
+          <li><img src="./images/gongyi1.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酒库</li>
-          <li><img src="./images/gongyi2.jpg" alt=""></li>
+          <li><img src="./images/gongyi2.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酒库</li>
-          <li><img src="./images/gongyi3.jpg" alt=""></li>
+          <li><img src="./images/gongyi3.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酒池</li>
-          <li><img src="./images/gongyi4.jpg" alt=""></li>
+          <li><img src="./images/gongyi4.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酒池</li>
-          <li><img src="./images/gongyi5.jpg" alt=""></li>
+          <li><img src="./images/gongyi5.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酿造车间</li>
-          <li><img src="./images/gongyi6.jpg" alt=""></li>
+          <li><img src="./images/gongyi6.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酿造车间</li>
-          <li><img src="./images/gongyi7.jpg" alt=""></li>
+          <li><img src="./images/gongyi7.jpg" width=680 height=240></li>
           <li class="text-center">好运酒业酿造车间</li>
-          <li><img src="./images/gongyi8.jpg" alt=""></li>
+          <li><img src="./images/gongyi8.jpg" width=680 height=240></li>
           <li class="text-center">真产地 真工艺 真酿造</li>
         </ul>
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
-      <div class="footer-bottom">
-        <div class="col-md-4 col-md-offset-4">
-          <p class="col-md-12">品驾酒有限公司</p>
-          <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-          <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
-        </div>
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
       </div>
+    </div>
   </div>
 </body>
 <script type="text/javascript">
-  $('.daohang ul').not($('.daohang ul').eq(0)).stop().hide();
-  $('.nav-pills li').click(function(){
-    $(this).addClass('active');
-    $('.nav-pills li').not($(this)).removeClass('active');
-    ind=$(this).index('.nav-pills li');
-    $('.daohang ul').eq(ind).stop().show();
-    $('.daohang ul').not($('.daohang ul').eq(ind)).stop().hide();
-  });
+$('.daohang ul').not($('.daohang ul').eq(0)).stop().hide();
+$('.nav-pills li').click(function() {
+  $(this).addClass('active');
+  $('.nav-pills li').not($(this)).removeClass('active');
+  ind = $(this).index('.nav-pills li');
+  $('.daohang ul').eq(ind).stop().show();
+  $('.daohang ul').not($('.daohang ul').eq(ind)).stop().hide();
+});
 </script>
+
 </html>
