--- a/join.html
+++ b/join.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,39 +14,49 @@
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/public.js'></script>
   <style type="text/css">
-    .title1 {
-      width: 100%;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-bottom: 40px;
-    }
-    .col-md-3{
-      margin: 10px 0;
-    }
-    .panel-primary > .panel-heading {
-      background-color: #9c061b;
-      border-color: #9c061b;
-    }
-    .panel-primary {
-      border-color: #9c061b;
-    }
-    .join-center{
-      margin-top: 40px;
-    }
-    .list-group-item-text{
-      line-height: 30px;
-    }
-    .panel-body{
-      font-size:16px;
-    }
-    a.list-group-item, button.list-group-item{
-      color: #333;
-    }
-    .panel-footer{
-      background:#fcf8e3;
-    }
+  .title1 {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-bottom: 40px;
+  }
+
+  .col-md-3 {
+    margin: 10px 0;
+  }
+
+  .panel-primary>.panel-heading {
+    background-color: #9c061b;
+    border-color: #9c061b;
+  }
+
+  .panel-primary {
+    border-color: #9c061b;
+  }
+
+  .join-center {
+    margin-top: 40px;
+  }
+
+  .list-group-item-text {
+    line-height: 30px;
+  }
+
+  .panel-body {
+    font-size: 16px;
+  }
+
+  a.list-group-item,
+  button.list-group-item {
+    color: #333;
+  }
+
+  .panel-footer {
+    background: #fcf8e3;
+  }
   </style>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -112,17 +123,25 @@
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
-      <div class="footer-bottom">
-        <div class="col-md-4 col-md-offset-4">
-          <p class="col-md-12">品驾酒有限公司</p>
-          <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-          <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
-        </div>
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
       </div>
+    </div>
   </div>
 </body>
-</html>
 
+</html>
