--- a/products.html
+++ b/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,17 +14,19 @@
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/public.js'></script>
   <style type="text/css">
-    .title1 {
-      width: 100%;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-bottom: 40px;
-    }
-    .col-md-3{
-      margin: 10px 0;
-    }
+  .title1 {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-bottom: 40px;
+  }
+
+  .col-md-3 {
+    margin: 10px 0;
+  }
   </style>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -53,7 +56,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-1.jpg">
+              <img src="./images/title-1.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -63,7 +66,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-2.jpg">
+              <img src="./images/title-2.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -73,7 +76,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg">
+              <img src="./images/title-3.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
@@ -83,7 +86,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-4.jpg">
+              <img src="./images/title-4.jpg" width=255 height=255>
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
@@ -93,7 +96,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-7.jpg">
+              <img src="./images/title-7.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -103,7 +106,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-6.jpg">
+              <img src="./images/title-6.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -113,7 +116,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-9.jpg">
+              <img src="./images/title-9.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
@@ -123,7 +126,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-5.jpg">
+              <img src="./images/title-5.jpg" width=255 height=255>
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
@@ -135,16 +138,25 @@
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
-      <div class="footer-bottom">
-        <div class="col-md-4 col-md-offset-4">
-          <p class="col-md-12">品驾酒有限公司</p>
-          <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-          <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
-        </div>
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
       </div>
+    </div>
   </div>
 </body>
+
 </html>
